<resources>
    <string name="app_name">Inventory App</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_s_name">Supplier\'s Name</string>
    <string name="supplier_pnone_nnumber">Supplier Pnone number</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
